--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,8 @@ daiquiri = "*"
 "beautifulsoup4" = "*"
 lxml = "*"
 toml = "*"
-
-[dev-packages]
+thoth-python = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
+
